Fix spacing of file loading

--- a/refinery/ui/source/styles/provenance-visualization.less
+++ b/refinery/ui/source/styles/provenance-visualization.less
@@ -547,6 +547,8 @@
   vertical-align: middle;
   display: inline-block;
   margin-left: 20px;
+  width: 100%;
+  text-align: center;
 }
 
 #provvis-loader-icon {
